[FIX] 1000x and desktop line-height, esp for long-ass, wrapped artist names, Shina Williams and your Afronaughts, I'm looking at you. Modulate grammar to better, more readable zones

--- a/javascript/css/style-1000px.css
+++ b/javascript/css/style-1000px.css
@@ -136,6 +136,7 @@
 		{
 			color: #373f42;
 			font-size: 2.22em;
+			line-height: 1.0em;
 		}
 		
 		#content header
