--- a/javascript/css/style-desktop.css
+++ b/javascript/css/style-desktop.css
@@ -194,6 +194,7 @@
 		{
 			color: #373f42;
 			font-size: 2.22em;
+			line-height: 1.0em;
 		}
 		
 		#content a
